--- a/index.html
+++ b/index.html
@@ -14,10 +14,39 @@
 
 <body>
   <header>
+    <div class="favicon">
+      <a href="#">
+          <img src="./assets/favico-1.svg" alt="">
+      </a>
+    </div>
 
+    <nav>
+      <ul>
+        <li class="activated" >Cachorros</li>
+        <li class="" >Gatos</li>
+        <li class="" >Ong/Projeto</li>
+        <li class="" >Blog</li>
+      </ul>
+    </nav>
+
+    <div class="login">
+      <a href="#">Entrar</a>
+
+      <div class="btn-primary">
+        Registrar
+        <img src="./assets/add-user.svg" alt="">
+      </div>
+
+    </div>
+    
   </header>
 
-
+  <div class="section">
+    <div class="dog">
+      <img src="./assets/home-banner.png" alt="">
+      <div class="banner-color"></div>
+    </div>
+  </div>
 
 
 
