--- a/web/index.html
+++ b/web/index.html
@@ -1,79 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/assets/favico.svg">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main.css">
-  <title>AdoptPet</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/styles/main.css">
+    <title>Document</title>
 </head>
-
-
 <body>
-    <header>
-        <div class="favicon">
-          <img src="/assets/favico-2.svg" alt="">
-        </div>
-
-        <nav>
-          <ul>
-            <li>Cachorros </li>
-            <div class="selector active"></div>
-          </ul>
-          <ul>
-            <li>Gatos </li>
-            <div class="selector"></div>
-          </ul>
-          <ul>
-            <li>Ong/Projeto</li>
-            <div class="selector"></div>
-          </ul>
-          <ul>
-            <li>Blog</li>
-            <div class="selector"></div>
-          </ul>
-        </nav>
-
-        <div class="s-login">
-          <a href="#">Entrar</a>
-          <div class="bnt-primary">
-            Registrar
-            <img src="/assets/add-user.svg" alt="icone criar conta">
-          </div>
-        </div>
-
-    </header>
-
-
-    <section class="home"> 
-      <img src="/assets/home-banner.png" alt="cães e gatos" class="pets">
-      <div class="banner">
-          <div class="text-side">
-              <h1>O projeto Adoptpet e voltado 
-                para adoção de cães e gatos.</h1>
-              <p>Em nosso espaço temos cães e gatos para todos 
-                os perfis e lares.</p>
-                <button class="btn-learn-more">
-                  Saiba Mais
-                  <img src="/assets/arrow-right.svg" alt="">
-                </button>    
-              
-          </div>
-          <div class="img-side">
-            <img src="/assets/woman_pets.png" alt="">
-          </div>
-        </div>
-        
-
-    </section>
-
-
 </body>
-
-
-
 </html>
