--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/styles/main.css">
-    <title>Document</title>
+    <title>AdoptPet</title>
 </head>
 <body>
+    <header>
+        <div class="content">
+            <div class="logo">
+                <a href="">
+                    <img src="./src/assets/favicon.svg" alt="favicon">
+                </a>
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="">Cachorros</a></li>
+                    <li><a href="">Gatos</a></li>
+                    <li><a href="">Ong/Projeto</a></li>
+                    <li><a href="">Blog</a></li>
+                </ul>
+            </nav>
+
+            <div class="user-s">
+                <a href="">Entrar</a>
+                <a href="" class="btn-register">
+                    Registrar
+                    <img src="./src/assets/add-user.svg" alt="Adicionar usuário">
+                </a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
